fix: comment input box not clearing after comment fix: dark mode action settings fix: unable to create label while creating issue fix: excludes bots from members fix: add BASE_HOST in env of trigger config - CLI

--- a/packages/ui/src/theme.css
+++ b/packages/ui/src/theme.css
@@ -6,8 +6,6 @@
     --background-2: 95.21% 0 0;
     --background-3: 100% 0 0;
     --foreground: 0% 0 0;
-    --card: 0 0% 100%;
-    --card-foreground: 0% 0 0;
     --popover: 93.05% 0 0;
     --popover-foreground: 0% 0 0;
     --primary: 65.03% 0.175 256.69;
@@ -35,8 +33,6 @@
     --background-2: 25.2% 0 0;
     --background-3: 28.5% 0 0;
     --foreground: 92.8% 0 0;
-    --card: 0 0% 100%;
-    --card-foreground: 92.8% 0 0;
     --popover: 28.5% 0 0;
     --popover-foreground: 92.8% 0 0;
     --primary: 65.03% 0.175 256.69;
